# monitoring_user_actions

./: Docker-compose.yml  Dockerfile  pyproject.toml  readmi.md
src/: app.py  db.py  depends.py  settings.py
src/repositories/: __init__.py
src/repositories/redis_repository/: __init__.py  base.py  cache.py  event_processor.py  log.json  redis_storage.py
src/schemas/: __init__.py
src/schemas/redis/: event.py  user.py
src/services/: __init__.py  redis_services.py
